# oz_assignment

ADMIN/: index.html
DB/: MongoDB-08.py  Sakila.sql  airbnb_dummy.py  airbnb_pymysql.py  ch_1420.sql  chapter01_06.ipynb  chapter0713.ipynb  fish_shaped.sql  mysqlsampledatabase.sql
DB/FISH/: dummy.py
Git /: oz_fullstack.yaml
Linux/: linux_0113(문제).ipynb  linux_1426.ipynb
day_1/: chat.css  chat.html  profile.css  profile.html  user.html
day_2/JAVASCRIPT-STUDY/: 02-자바스크립트소개.html  03-자바스크립트 동작원리 & 출력해보기.html  04-콘솔출력과 자료형.html  05-변수와 상수 그리고 대입.html  06-문자열prompt.html  07-탬플릿리터럴.html  (+10 more)
membership/: db.sqlite3  pyproject.toml
membership/accounts/: admin.py
membership/accounts/migrations/: 0001_initial.py
membership/common/: models.py
membership/membership_project/: settings.py
oz-Django-study/: db.sqlite3  pyproject.toml
oz-Django-study/boards/: admin.py  models.py
oz-Django-study/boards/migrations/: 0001_initial.py  0002_board_date_board_likes_board_reviews_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
oz-Django-study/common/: models.py
oz-Django-study/config/: settings.py  urls.py
oz-Django-study/feeds/: urls.py  views.py
oz-Django-study/users/: admin.py  models.py
oz-Django-study/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
python-study/: Ch04_task(code).ipynb  Ch05_task.ipynb  Ch1416_과제.ipynb  Ch1720_과제.ipynb  Ch2132_task.ipynb  Chapter05-08_과제.ipynb  Chapter0913_과제 .ipynb  fish.py  fish_class.py  fish_function.py  health_check.ipynb  python chapter1~2(easy).ipynb
(+23 files in other folders)
