[tool.poetry]
name = "membership-project"
version = "0.1.0"
description = "membership_project"
authors = ["SOLBI <thfqlsla35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
